Feature/improvements (#4)
* improved dynamic programming algorithm

* migrated to java 25 and refactored everything to align with the upgrade